[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/textreveal.gd" type="Script" id=1]
[ext_resource path="res://components/textrevealbox.gd" type="Script" id=2]

[node name="TextrevealBox" type="Node2D"]
script = ExtResource( 2 )

[node name="TextReveal" type="Label" parent="."]
margin_left = -54.0
margin_top = -28.0
margin_right = 56.0
margin_bottom = 21.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished_reveal" from="TextReveal" to="." method="_on_TextReveal_finished_reveal"]
